--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,3 +39,7 @@ logging.pattern.console= %d{yyyy-MM-dd HH:mm:ss} - %msg%n
 # Logging pattern for file
 #logging.pattern.file= %d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
 #logging.file=${user.dir}/application.log
+
+#multipart file sizes
+spring.http.multipart.max-file-size=50Mb
+spring.http.multipart.max-request-size=50Mb
